# co_student_rf_detr

./: .gitignore  README.md  pyproject.toml  train_costudent.py
co_student/: __init__.py  augmentation.py  coco_eval_callback.py  collate.py  costudent_dataset.py  datamodule.py  dataset.py  geometric.py  mean_teacher_ema.py  module.py  pseudo_labels.py  train_config.py  triple_augment.py
