[project]
name = "co-student-rf-detr"
version = "0.1.0"
description = "RF-DETR training experiments"
requires-python = ">=3.10,<3.14"
dependencies = [
    "rfdetr[train]",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "wandb>=0.18.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
